Refactor and clean up code
Converted mutable fields to final in OrderResponseDTO. Removed unused imports and redundant code across multiple classes. Consolidated import statements and corrected formatting issues in tests, enhancing readability and maintainability.